--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p class="about__text">PornX AI - is a revolutionary app designed to transform text descriptions into the hottest video content using advanced artificial intelligence algorithms. This app opens new horizons for your lewd fantasies</p>
             <h4 class="access">Access will be denied through</h4>
 
-            <p class="timer">!!!TIMER HERE!!!</p>
+            <p class="timer"></p>
 		</div>
 
 
