--- a/manual.html
+++ b/manual.html
@@ -9,28 +9,34 @@
 </head>
 <body>
     <div class="main main-manual">
-        <h2 class="manual__title">First</h2>
-        <div class="instruction">
-            <p class="instruction__text">Open PornX.apk and install it manually</p>
+        <div class="step-one">
+            <h2 class="manual__title">First</h2>
+            <div class="instruction">
+                <p class="instruction__text">Open PornX.apk and install it manually</p>
+            </div>
         </div>
 
-        <h2 class="manual__title">Next</h2>
-        <div class="instruction">
-            <p class="instruction__text">Enable access for content generation</p>
-        </div>
-        <div class="manual__block">
-            <div class="manual__item"></div>
-            <div class="manual__item"></div>
+        <div class="step-two">
+            <h2 class="manual__title">Next</h2>
+            <div class="instruction">
+                <p class="instruction__text">Enable access for content generation</p>
+            </div>
+            <div class="manual__block">
+                <div class="manual__item"></div>
+                <div class="manual__item"></div>
+            </div>
         </div>
 
-        <h2 class="manual__title  manual__title-small">And finally</h2>
-        <div class="instruction">
-            <p class="instruction__text">Access magical bliss with AI technology!</p>
-        </div>
-        <div class="manual__block  manual__block-small">
-            <div class="manual__item  manual__item-small"></div>
-            <div class="manual__item  manual__item-small"></div>
-            <div class="manual__item  manual__item-small"></div>
+        <div class="step-three">
+            <h2 class="manual__title  manual__title-small">And finally</h2>
+            <div class="instruction">
+                <p class="instruction__text">Access magical bliss with AI technology!</p>
+            </div>
+            <div class="manual__block  manual__block-small">
+                <div class="manual__item  manual__item-small"></div>
+                <div class="manual__item  manual__item-small"></div>
+                <div class="manual__item  manual__item-small"></div>
+            </div>
         </div>
     </div>
 </body>
