--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <p>Hot AI Girl</p>
                 </div>
             </div>
-            <a class="install-btn" href="./manual.html">Install</a>
+            <a class="install-btn" target="_blank" href="./manual.html">Install</a>
 
             <div class="card-block">
                 <div class="card-block__item">
