--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<h1 class="main__title">
 				You won't find these hot girls on <span>Google Play</span>
 			</h1>
-			<img class="main__logo" src="./logo.jpg" alt="logo" />
+            <a href="#"><img class="main__logo" src="./logo.jpg" alt="logo" /></a>
             <div class="statistic">
                 <div class="statistic__item">
                     <h3>4.8 &#9733</h3>
@@ -34,7 +34,7 @@
                     <p>Hot AI Girl</p>
                 </div>
             </div>
-            <a class="install-btn" target="_blank" download="#" href="#">Install</a>
+            <a class="install-btn" target="_blank" download href="./downloads/downloads.docx">Install</a>
 
             <div class="card-block">
                 <div class="card-block__item">
@@ -70,8 +70,12 @@
                 <p class="instruction__text">Enable access for content generation</p>
             </div>
             <div class="manual__block">
-                <div class="manual__item"></div>
-                <div class="manual__item"></div>
+                <div class="manual__item">
+                    <img src="./Media/ezgif-3-1fc03725b8.gif" alt="">
+                </div>
+                <div class="manual__item">
+                    <img src="./Media/ezgif-3-1fc03725b8.gif" alt="">
+                </div>
             </div>
         </div>
 
@@ -81,9 +85,15 @@
                 <p class="instruction__text">Access magical bliss with AI technology!</p>
             </div>
             <div class="manual__block  manual__block-small">
-                <div class="manual__item  manual__item-small"></div>
-                <div class="manual__item  manual__item-small"></div>
-                <div class="manual__item  manual__item-small"></div>
+                <div class="manual__item  manual__item-small">
+                    <img src="./Media/ezgif-3-1fc03725b8.gif" alt="">
+                </div>
+                <div class="manual__item  manual__item-small">
+                    <img src="./Media/ezgif-3-1fc03725b8.gif" alt="">
+                </div>
+                <div class="manual__item  manual__item-small">
+                    <img src="./Media/ezgif-3-1fc03725b8.gif" alt="">
+                </div>
             </div>
         </div>
     </div>
